--- a/app/src/main/res/layout/activity_albums_list.xml
+++ b/app/src/main/res/layout/activity_albums_list.xml
@@ -6,8 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.AlbumsListActivity">
 
+    <include layout="@layout/action_bar_toolbar"/>
+
+    <TextView
+        android:id="@+id/tvAlbumTitle"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="70dp"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/albums_title" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAlbums"
+        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
