--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -2,20 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivAlbum"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="6dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/album" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="5dp"
+        android:background="@drawable/album_border"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -28,6 +32,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:textColor="#000000"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Album Name" />
@@ -35,7 +40,8 @@
             <TextView
                 android:id="@+id/tvAlbumArtist"
                 android:layout_marginLeft="5dp"
-                android:textColor="#78909C"
+                android:textColor="@color/text_secondary"
+                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
@@ -54,6 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
                 android:layout_marginRight="10dp"
                 tools:text="202C" />
 
@@ -61,7 +69,8 @@
                 android:id="@+id/tvAlbumType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#78909C"
+                android:textColor="@color/text_secondary"
+                android:textSize="16sp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="10dp"
                 tools:text="CD" />
