--- a/app/src/main/res/layout/item_album.xml
+++ b/app/src/main/res/layout/item_album.xml
@@ -4,6 +4,7 @@
     android:layout_height="70dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:id="@+id/lyAlbumItem"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
