[HU02] Adding top left menu

--- a/app/src/main/res/layout/action_bar_toolbar.xml
+++ b/app/src/main/res/layout/action_bar_toolbar.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/primary"
         android:id="@+id/toolbar"
+        app:titleTextColor="@color/white"
         app:theme="@style/ToolBarTheme" />
 
 </com.google.android.material.appbar.AppBarLayout>
