--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,8 +16,7 @@
 
     <style name="ToolBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">@color/white</item>
-        <item name="titleTextColor">#FFFFFF</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="titleTextColor">@color/white</item>
     </style>
 
     <style name="Theme.Vinilos.NoActionBar">
