--- a/app/src/main/res/layout/album_scrolling_content.xml
+++ b/app/src/main/res/layout/album_scrolling_content.xml
@@ -11,12 +11,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvAlbumDetailsTitle"
-            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             android:textColor="#000000"
             android:textSize="16sp"
@@ -26,7 +25,6 @@
 
         <TextView
             android:id="@+id/tvAlbumDetailsArtist"
-            android:layout_marginLeft="5dp"
             android:textColor="@color/text_secondary"
             android:textSize="16sp"
             android:layout_width="wrap_content"
@@ -36,13 +34,13 @@
 
         <TextView
             android:id="@+id/tvAlbumDetailsDescription"
-            android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             android:textColor="#000000"
             android:textSize="16sp"
+            android:layout_marginBottom="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Album Name" />
+            tools:text="@string/description" />
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
