--- a/app/src/main/res/layout/activity_album_details.xml
+++ b/app/src/main/res/layout/activity_album_details.xml
@@ -50,6 +50,8 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/album_scrolling_content" />
+    <include
+        android:id="@+id/scTracksList"
+        layout="@layout/album_scrolling_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
