--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:id="@+id/lyTrackItem"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/lyTrackItem"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivAlbumCover"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/album"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/play_button"
         android:scaleType="centerCrop" />
 
     <LinearLayout
@@ -22,7 +19,6 @@
         android:layout_marginLeft="5dp"
         android:background="@drawable/album_border"
         android:orientation="horizontal">
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -45,7 +41,7 @@
                 android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="1dp"
                 tools:text="Juan Perez" />
         </LinearLayout>
 
@@ -65,8 +61,6 @@
                 android:textColor="@color/black"
                 android:layout_marginRight="10dp"
                 tools:text="5:50" />
-
-
         </LinearLayout>
     </LinearLayout>
 
